[package]
name = "wick-downloader"
version = "0.3.1"
authors = ["Waddlesworth <github@genj.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "wick_downloader"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = { git = "https://github.com/neon-bindings/neon", branch="main" }

[dependencies]
neon = { git = "https://github.com/neon-bindings/neon", features = ["event-handler-api"], branch="main" }
tokio = { version = "0.2", features = ["full"] }
wickdl = { git = "https://github.com/SirWaddles/WickDownloader" }
